--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "Raylex Lee",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^8.1.1"
+    "electron": "^8.5.3"
+  },
+  "dependencies": {
+    "xlsx": "^0.16.8"
   }
 }
